--- a/Django REST/pyproject.toml
+++ b/Django REST/pyproject.toml
@@ -19,3 +19,9 @@ dependencies = [
     "psycopg2>=2.9.10",
     "redis>=6.4.0",
 ]
+
+[dependency-groups]
+dev = [
+    "coverage>=7.10.6",
+    "factory-boy>=3.3.3",
+]
