--- a/Django REST/pyproject.toml
+++ b/Django REST/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt[crypto]>=5.5.1",
     "djoser>=2.3.3",
+    "drf-spectacular>=0.28.0",
     "faker>=37.5.3",
+    "gunicorn>=23.0.0",
     "markdown>=3.8.2",
     "pillow>=11.3.0",
     "psycopg2>=2.9.10",
