--- a/Django REST/pyproject.toml
+++ b/Django REST/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "celery[redis]>=5.3.1",
     "crispy-bootstrap5>=2025.6",
     "django>=5.2.4",
     "django-crispy-forms>=2.4",
@@ -14,6 +15,7 @@ dependencies = [
     "djangorestframework-simplejwt[crypto]>=5.5.1",
     "djoser>=2.3.3",
     "drf-spectacular>=0.28.0",
+    "eventlet>=0.40.3",
     "faker>=37.5.3",
     "gunicorn>=23.0.0",
     "markdown>=3.8.2",
@@ -24,6 +26,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "celery-types>=0.23.0",
     "coverage>=7.10.6",
     "factory-boy>=3.3.3",
 ]
