--- a/Django REST/pyproject.toml
+++ b/Django REST/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "celery[redis]>=5.3.1",
     "crispy-bootstrap5>=2025.6",
     "django>=5.2.4",
+    "django-celery-beat>=2.8.1",
     "django-crispy-forms>=2.4",
     "django-debug-toolbar>=6.0.0",
     "django-filter>=25.1",
@@ -17,6 +18,7 @@ dependencies = [
     "drf-spectacular>=0.28.0",
     "eventlet>=0.40.3",
     "faker>=37.5.3",
+    "flower>=2.0.1",
     "gunicorn>=23.0.0",
     "markdown>=3.8.2",
     "pillow>=11.3.0",
