--- a/aio_backend/pyproject.toml
+++ b/aio_backend/pyproject.toml
@@ -7,10 +7,12 @@ dependencies = [
     "aiohttp>=3.12.15",
     "aiosqlite>=0.21.0",
     "alembic>=1.16.5",
+    "bcrypt>=4.3.0",
     "fastapi>=0.117.1",
     "passlib>=1.7.4",
     "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.9",
+    "pyjwt>=2.10.1",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.37.0",
 ]
