--- a/aio_backend/pyproject.toml
+++ b/aio_backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.9",
     "pyjwt>=2.10.1",
+    "redis>=6.4.0",
     "sqlalchemy>=2.0.43",
     "uvicorn[standard]>=0.37.0",
 ]
