Добавление nginx.conf

--- a/Django_REST/configs/nginx.conf
+++ b/Django_REST/configs/nginx.conf
@@ -9,6 +9,12 @@ server {
 
     client_max_body_size 20M;
 
+
+    location /media/ {
+        alias /opt/TMS_PY64_General/Django_REST/media;
+    }
+
+
     location / {
         proxy_set_header Host $http_host;
         proxy_set_header Upgrade $http_upgrade;
