--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,6 +29,7 @@ jobs:
       with:
         enable-cache: true
         python-version: ${{ matrix.python-version }}
+        python-version-file: "Django_REST/pyproject.toml"
 
     - name: Install uv
       uses: astral-sh/setup-uv@v6
