--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,13 +29,14 @@ jobs:
       with:
         enable-cache: true
         python-version: ${{ matrix.python-version }}
-        python-version-file: "Django_REST/pyproject.toml"
 
     - name: Install uv
       uses: astral-sh/setup-uv@v6
 
     - name: Install the project
-      run: uv sync --locked --all-extras --dev
+      run: |
+        cd Django_REST
+        uv sync --locked --all-extras --dev
 
     - name: Run Tests
       run: |
