Fix typo in DB_USER variable in workflow

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,7 +16,7 @@ jobs:
     env:
       UV_PYTHON: ${{ matrix.python-version }}
       DB_NAME: db_django
-      DB_USERL: django
+      DB_USER: django
       DB_PASSWORD: password
 
     services:
