--- a/aio_backend/pyproject.toml
+++ b/aio_backend/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "aiohttp>=3.12.15",
     "aiosqlite>=0.21.0",
     "alembic>=1.16.5",
+    "asyncpg>=0.30.0",
     "bcrypt>=4.3.0",
     "fastapi>=0.117.1",
     "passlib>=1.7.4",
